--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <tr>
                 <td>Foros</td>
                 <td>Actividades</td>
+                <td>Ideas solidarias</td>
             </tr>
         </table>
     </body>
